# garfsay

./: .gitignore  Cargo.toml  README.md  log.txt  text
src/: main.rs  tmp0225dk  tmp02ahr7  tmp04dmtf  tmp04kioy  tmp05ipbt  tmp05x1p2  tmp05zc68  tmp06903i  tmp06ybah  tmp08lz7e  tmp0_7v8s  tmp0chy4y  tmp0d91pe  tmp0f_igv  tmp0ftaxk  tmp0hgg9a  tmp0i4w0s  tmp0jyjmp  tmp0kolrj  tmp0l9fzo  tmp0mk1ng  tmp0mnzr3  tmp0mycw_  tmp0p89ly  tmp0s9_mk  tmp0tfymb  tmp0tn_kc  tmp0ubuhe  tmp0xawvl  tmp0xdj83  tmp0yjfhc  tmp0zqe8l  tmp11r8yv  tmp13r0h6  tmp140uxg  tmp15j0hl  tmp15o33x  tmp16eajt  tmp17ozny  (+1144 more)
